--- a/Lab08_WKana.Application/Lab08_WKana.Application.csproj
+++ b/Lab08_WKana.Application/Lab08_WKana.Application.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
       <PackageReference Include="Mapster" Version="7.4.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
     </ItemGroup>
 
 </Project>
